--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active{
+    background-color:#1ABC9C;
+    border-radius: 7px;
+    padding: 8px;
+}
